--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.1",
-    "helmet": "^7.0.0"
+    "helmet": "^7.0.0",
+    "promised-sqlite3": "^2.1.0",
+    "sqlite3": "^5.1.6"
   }
 }
