--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.1",
     "helmet": "^7.0.0",
-    "promised-sqlite3": "^2.1.0",
+    "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
