--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.1",
     "helmet": "^7.0.0",
+    "request-promise": "^4.2.6",
     "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6"
   },
